[package]
name = "stack_browse"
version = "0.1.0"
authors = ["ykafia <kafia.youness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
scraper = "0.10.1"
select = "0.4.3"
console = "0.9.0"
dialoguer = "0.4.0"
argparse = "0.2.2"